--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="offset-lg-8 col-lg-2 d-none d-lg-block ">
                     <ul>
                         <li class="header-ticket">
-                            <a class="pr-0" href="https://docs.google.com/forms/d/e/1FAIpQLSdCkOLH9amVY0NbAoa42dsdpkfvi7IRc4kyB8AzadWZf04LqQ/viewform?usp=sf_link">Register</a>
+                            <a class="pr-0" href="https://goo.gl/forms/CnoqZphcXz1krajJ3">Register</a>
                         </li>
                     </ul>
                 </div>
@@ -255,7 +255,7 @@
 
                                 <h3>The Code Saga.</h3>
 
-                            <p>A monthly coding competition of 3 hours.</p>
+                            <p>A Quarterly organised Coding Challenge exclusively designed for IOSD's Techday Series and Aimed towards new comers in the field of competitive coding.</p>
 
                         </div>
                     </div>
@@ -279,7 +279,7 @@
 
                                 <h3>Winner Winner Chicken Dinner.</h3>
 
-                            <p>IOSD Gaming's very own PUBG EVENT.</p>
+                            <p>IOSD Gaming introduces the talk of the town to challenge your buddies into Player Unknowns Battlegrounds A.K.A. PUBG.</p>
 
                         </div>
                     </div>
