--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@
             <!-- /col end-->
         </div>
         <div class="row">
-            <div class="col-lg-12">
-                <div class="inner-blog" style="grid-template-columns: repeat(3, 1fr)">
+            <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12">
                     <div class="single-blog xs-mb30">
                         <div class="blog-img">
                             <img class="img-fluid" src="assets/img/team/3.jpg"  alt="">
@@ -259,6 +258,8 @@
 
                         </div>
                     </div>
+                    </div>
+                    <div class = "col-lg-4 col-md-4 col-xs-12 col-sm-12">
                     <div class="single-blog xs-mb30">
                         <div class="blog-img">
                             <img class="img-fluid" src="assets/img/team/5.jpg" alt="">
@@ -271,6 +272,8 @@
 
                         </div>
                     </div>
+                    </div>
+                    <div class = "col-lg-4 col-md-4 col-xs-12 col-sm-12">
                     <div class="single-blog xs-mb30">
                         <div class="blog-img">
                             <img class="img-fluid" src="assets/img/slide/pubg.jpg" alt="">
@@ -283,8 +286,7 @@
 
                         </div>
                     </div>
-
-                </div>
+                    </div>
             </div>
         </div>
         <!-- /row end-->
