--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     <!--Main Container Start Here-->
     <div class="main-container">
         <!--Header Start Here-->
-        <header class="header base-style-2">
+        <header class="header base-style-2" style="position: relative;">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
                         <div class="brand-logo">
                             <a class="eventex-brand" href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
                         </div>
@@ -162,7 +162,7 @@
                 -->
                 <!-- /col end-->
 
-                <div class="offset-lg-8 col-lg-2 d-none d-lg-block ">
+                <div class="offset-lg-8 offset-md-8 offset-sm-8 offset-xs-12 col-lg-2 col-md-2 col-sm-2 col-xs-12">
                     <ul>
                         <li class="header-ticket">
                             <a class="pr-0" href="https://goo.gl/forms/CnoqZphcXz1krajJ3">Register</a>
@@ -176,8 +176,9 @@
         <!-- container end-->
     </header>
     <!--Header End Here-->
-
+    </div>
     <!--Hero Banner Area Start Here-->
+    <div class="container">
     <div class="hero-banner-area home-2 hero-bg-2 parallax no-attm">
         <div class="container">
             <div class="row">
@@ -199,6 +200,7 @@
         </div>
         <!-- /container end-->
     </div>
+</div>
     <!--Hero Banner Area End Here-->
 
     <!--Feature Area Start Here-->
@@ -679,47 +681,11 @@ body > div.main-container > div.our-sponsors-area-tow.pad100 > div > div:nth-chi
     </div>
 </div>
 
-
-<!--Contact Us Area Start Here-->
-<div class="contact-us-area-two pad-top100 bg-contact parallax no-attm">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="section-title text-center">
-                    <div class="title-text mb50">
-                        <h2>Contact Us</h2>
-                    </div>
-                </div>
-            </div>
-            <!-- /col end-->
         </div>
         <!-- /row end-->
         <div class="row">
-            <div class="col-lg-4 pr-0">
-                <div class="inner-box">
-                    <form action="#">
-                        <div class="row">
-                            <div class="col-lg-12 mb50">
-                                <input class="form-control" type="text" placeholder="Name" required>
-                            </div>
-                            <div class="col-lg-12 mb50">
-                                <input class="form-control" type="email" placeholder="Email" required>
-                            </div>
-                            <div class="col-lg-12 mb50">
-                                <input class="form-control" type="text" placeholder="Subject" required>
-                            </div>
-                            <div class="col-lg-12">
-                                <textarea class="form-control" name="massage" placeholder="Massage"></textarea>
-                            </div>
-                            <div class="col-lg-12">
-                                <button class="btn-primary" type="submit">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
             <!-- /col end-->
-            <div class="col-lg-8 pl-0">
+            <div class="col-lg-12 pl-0">
                 <!--Google Map Start Here-->
                 <div class="gmap">
                     <div id="googlemap"></div>
