--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
-
     -->
 
     <!--Bootstrap Css-->
@@ -65,10 +64,10 @@
     <!--Main Container Start Here-->
     <div class="main-container">
         <!--Header Start Here-->
-        <header class="header base-style-2" style="position: relative;">
+        <header class="header base-style-2" style = "position: relative;">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+                    <div class="col-lg-2">
                         <div class="brand-logo">
                             <a class="eventex-brand" href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
                         </div>
@@ -79,7 +78,6 @@
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"><i class="fa fa-bars"></i></span>
                           </button>
-
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav ml-auto">
                                     <li class="nav-item active dropdown">
@@ -162,7 +160,7 @@
                 -->
                 <!-- /col end-->
 
-                <div class="offset-lg-8 offset-md-8 offset-sm-8 offset-xs-12 col-lg-2 col-md-2 col-sm-2 col-xs-12">
+                <div class="offset-lg-8 col-lg-2 d-lg-block ">
                     <ul>
                         <li class="header-ticket">
                             <a class="pr-0" href="https://goo.gl/forms/CnoqZphcXz1krajJ3">Register</a>
@@ -176,9 +174,8 @@
         <!-- container end-->
     </header>
     <!--Header End Here-->
-    </div>
+
     <!--Hero Banner Area Start Here-->
-    <div class="container">
     <div class="hero-banner-area home-2 hero-bg-2 parallax no-attm">
         <div class="container">
             <div class="row">
@@ -200,7 +197,6 @@
         </div>
         <!-- /container end-->
     </div>
-</div>
     <!--Hero Banner Area End Here-->
 
     <!--Feature Area Start Here-->
@@ -490,101 +486,23 @@ body > div.main-container > div.our-sponsors-area-tow.pad100 > div > div:nth-chi
 </style>
 <!--Our Sponsers Area Start Here-->
 <div class="our-sponsers-area-tow pad100">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="section-title text-center">
-                    <div class="title-text mb50 xs-mb40">
-                        <h2>Our Previous Sponsors</h2>
-                    </div>
-                </div>
-            </div>
-            <!-- /col end-->
-        </div>
-        <!-- /row end-->
-        <div class="row">
-            <div class="sponsers-active owl-carousel owl-theme">
-                <div class="col-lg-12">
-                    <div class="single-sponsers">
-                        <a href="#"><img src="assets/img/sponsers/1.png" alt=""></a>
-                    </div>
-                    <div class="boder"></div>
-                    <div class="single-sponsers">
-                        <a href="#"><img src="assets/img/sponsers/2.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="single-sponsers">
-                        <a href="#"><img src="assets/img/sponsers/3.png" alt=""></a>
-                    </div>
-                    <div class="boder"></div>
-                    <div class="single-sponsers">
-                        <a href="#"><img src="assets/img/sponsers/4.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="single-sponsers">
-                        <a href="#"><img src="assets/img/sponsers/5.png" alt=""></a>
-                    </div>
-                    <div class="boder"></div>
-                    <div class="single-sponsers">
-                        <a href="#"><img src="assets/img/sponsers/6.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="single-sponsers">
-                        <a href="#"><img src="assets/img/sponsers/8.png" alt=""></a>
-                    </div>
-                    <div class="boder"></div>
-                    <div class="single-sponsers">
-                        <a href="#"><img src="assets/img/sponsers/7.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="single-sponsers">
-                        <a href="#"><img src="assets/img/sponsers/9.png" alt=""></a>
-                    </div>
-                    <div class="boder"></div>
-                    <div class="single-sponsers">
-                        <a href="#"><img src="assets/img/sponsers/5.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-12">
-                    <div class="single-sponsers">
-                        <a href="#"><img src="assets/img/sponsers/3.png" alt=""></a>
-                    </div>
-                    <div class="boder"></div>
-                    <div class="single-sponsers">
-                        <a href="#"><img src="assets/img/sponsers/1.png" alt=""></a>
-                    </div>
-                </div>
-            </div>
-            <!-- /col end-->
-        </div>
-        <!-- /row end-->
-
-    </div>
     <!-- /container end-->
 </div>
 <!--Our Sponsers Area End Here-->
 <style type="text/css">
     @import url(https://fonts.googleapis.com/css?family=Raleway);
-
 .faq-header{
   font-size: 42px;
   border-bottom: 1px dotted #ccc;
   padding: 24px;
 }
-
 .faq-content {
   margin: 0 auto;
 }
-
 .faq-question {
   padding: 20px 0;
   border-bottom: 1px dotted #ccc;
 }
-
 .panel-title {
   font-size: 24px;
   width: 100%;
@@ -594,7 +512,6 @@ body > div.main-container > div.our-sponsors-area-tow.pad100 > div > div:nth-chi
   display: block;
   cursor: pointer;
 }
-
 .panel-content {
   font-size: 20px;
   padding: 0px 14px;
@@ -609,13 +526,11 @@ body > div.main-container > div.our-sponsors-area-tow.pad100 > div > div:nth-chi
   -o-transition: .4s ease;
   transition: .4s ease;
 }
-
 .panel:checked ~ .panel-content{
   height: auto;
   opacity: 1;
   padding: 14px;
 }
-
 .plus {
   position: absolute;
   margin-left: 20px;
@@ -633,14 +548,12 @@ body > div.main-container > div.our-sponsors-area-tow.pad100 > div > div:nth-chi
   -o-transition: .2s ease;
   transition: .2s ease;
 }
-
 .panel:checked ~ .plus {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-
 .panel {
   display: none;
 }
@@ -681,11 +594,47 @@ body > div.main-container > div.our-sponsors-area-tow.pad100 > div > div:nth-chi
     </div>
 </div>
 
+
+<!--Contact Us Area Start Here-->
+<div class="contact-us-area-two pad-top100 bg-contact parallax no-attm">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title text-center">
+                    <div class="title-text mb50">
+                        <h2>Contact Us</h2>
+                    </div>
+                </div>
+            </div>
+            <!-- /col end-->
         </div>
         <!-- /row end-->
         <div class="row">
+            <div class="col-lg-4 pr-0">
+                <div class="inner-box">
+                    <form action="#">
+                        <div class="row">
+                            <div class="col-lg-12 mb50">
+                                <input class="form-control" type="text" placeholder="Name" required>
+                            </div>
+                            <div class="col-lg-12 mb50">
+                                <input class="form-control" type="email" placeholder="Email" required>
+                            </div>
+                            <div class="col-lg-12 mb50">
+                                <input class="form-control" type="text" placeholder="Subject" required>
+                            </div>
+                            <div class="col-lg-12">
+                                <textarea class="form-control" name="massage" placeholder="Massage"></textarea>
+                            </div>
+                            <div class="col-lg-12">
+                                <button class="btn-primary" type="submit">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
             <!-- /col end-->
-            <div class="col-lg-12 pl-0">
+            <div class="col-lg-8 pl-0">
                 <!--Google Map Start Here-->
                 <div class="gmap">
                     <div id="googlemap"></div>
